--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,65 @@
-form{
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    width: 100vw;
+    height: 100vh;
+  }
+  
+  h1 {
+    margin: 2rem auto;
+    max-width: max-content;
+  }
+  
+  form {
+    margin-top: 2rem;
+    margin-left: 2rem;
+    width: 500px;
     display: flex;
     flex-flow: column;
     gap: 1rem;
-    width: 500px;
-}
-
-form input{
+  }
+  
+  form input {
     height: 2.5rem;
-}
-
-form label {
+    padding-left: 1rem;
+  }
+  
+  form input[type="text"] {
+    width: 80%;
+  }
+  
+  form label {
     display: flex;
     align-items: center;
     gap: 1rem;
-}
-table{
+  }
+  
+  form button {
+    padding: 0.5rem 5.25rem;
+    width: max-content;
+  }
+  
+  table {
+    margin-top: 4rem;
+    margin-left: 2rem;
     width: 700px;
-}
-table thead tr th{
+  }
+  
+  table thead tr th {
     text-align: left;
-}
+    padding: 1rem;
+    padding-bottom: 0;
+  }
+  
+  table td {
+    padding: 1rem;
+  }
+  
+  #total-amount {
+    font-size: 18px;
+    font-weight: bold;
+  }
